--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,4 +7,7 @@ Depends: R (>= 3.5.1)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat
+Suggests: 
+  testthat,
+  mockery
+RoxygenNote: 6.1.0
