Align declared imports with used imports.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,9 @@ LazyData: true
 Suggests: 
   testthat,
   mockery
-RoxygenNote: 6.1.0
-Imports: jsonld,
+RoxygenNote: 6.1.1
+Imports: dplyr,
+  extrafont,
+  readr,
+  jsonld,
   jsonlite,
-  readr
