--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,11 @@ Encoding: UTF-8
 LazyData: true
 Suggests: 
   testthat,
+  tibble,
   mockery
 RoxygenNote: 6.1.1
 Imports: dplyr,
+  ggplot2,
   extrafont,
   readr,
   jsonld,
