--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(.onLoad)
 export(PT)
+export(dl_annotate)
 export(load_templates)
 export(main)
 export(parse_ascribees)
@@ -11,8 +12,14 @@ export(parse_table_spec)
 export(produce_plots)
 export(save_plots)
 export(source_template)
+import(dplyr)
+import(ggplot2)
+import(readr)
+import(sysfonts)
 importFrom(dplyr,first)
 importFrom(extrafont,font_import)
 importFrom(extrafont,loadfonts)
+importFrom(rappdirs,user_cache_dir)
 importFrom(readr,read_csv)
+importFrom(showtext,showtext_auto)
 importFrom(spekex,read_spek)
