Use montserrat in knitr generated figures.   Consolidate read data dependency to pictoralist.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(parse_promoted_candidates)
 export(parse_spek_candidates)
 export(parse_table_spec)
 export(produce_plots)
+export(read_data)
 export(save_plots)
 export(source_template)
 import(dplyr)
